Playbooks to swagger
