# server/endpoints/playbooks.py
@@ -11,13 +11,17 @@ import core.config.paths
 
 def get_playbooks():
     from server.context import running_context
+
     @roles_accepted(*running_context.user_roles['/playbooks'])
     def __func():
         return {"status": "success", "playbooks": running_context.controller.get_all_workflows()}
+
     return __func()
+
 
 def create_playbook(playbook_name):
     from server.context import running_context
+
     @roles_accepted(*running_context.user_roles['/playbooks'])
     def __func():
         form = forms.AddPlaybookForm(request.form)
@@ -42,14 +46,17 @@ def create_playbook(playbook_name):
                 running_context.controller.create_playbook_from_template(playbook_name=playbook_name)
                 current_app.logger.info('Playbook {0} created from default template'.format(playbook_name))
             return {"status": status,
-                               "playbooks": running_context.controller.get_all_workflows()}
+                    "playbooks": running_context.controller.get_all_workflows()}
         else:
             current_app.logger.error('Invalid form received in create_playbook')
             return {'status': 'error: invalid form'}
+
     return __func()
+
 
 def read_playbook(playbook_name):
     from server.context import running_context
+
     @roles_accepted(*running_context.user_roles['/playbooks'])
     def __func():
         if playbook_name == "templates":
@@ -68,10 +75,13 @@ def read_playbook(playbook_name):
                     return {"status": "error: name not found"}
             except Exception as e:
                 return {"status": "error: {0}".format(e)}
+
     return __func()
+
 
 def update_playbook(playbook_name):
     from server.context import running_context
+
     @roles_accepted(*running_context.user_roles['/playbooks'])
     def __func():
         if running_context.controller.is_playbook_registered(playbook_name):
@@ -88,19 +98,22 @@ def update_playbook(playbook_name):
                                   os.path.join(core.config.paths.workflows_path, '{0}.workflow'.format(new_name)))
                     current_app.logger.info('Playbook renamed from {0} to {1}'.format(playbook_name, new_name))
                     return {"status": 'success',
-                                       "playbooks": running_context.controller.get_all_workflows()}
+                            "playbooks": running_context.controller.get_all_workflows()}
                 else:
                     current_app.logger.error('No new name provided to update playbook')
                     return {"status": 'error: no name provided',
-                                       "playbooks": running_context.controller.get_all_workflows()}
+                            "playbooks": running_context.controller.get_all_workflows()}
             else:
                 current_app.logger.error('Invalid JSON provided to update playbook')
                 return {"status": 'error: invalid json',
-                                   "playbooks": running_context.controller.get_all_workflows()}
+                        "playbooks": running_context.controller.get_all_workflows()}
+
     return __func()
+
 
 def delete_playbook(playbook_name):
     from server.context import running_context
+
     @roles_accepted(*running_context.user_roles['/playbooks'])
     def __func():
         status = 'success'
@@ -116,11 +129,14 @@ def delete_playbook(playbook_name):
                 status = 'error: error occurred while remove playbook file: {0}'.format(e)
 
         return {'status': status, 'playbooks': running_context.controller.get_all_workflows()}
+
     return __func()
+
 
 def copy_playbook(playbook_name):
     from server.context import running_context
     from server.flaskserver import write_playbook_to_file
+
     @roles_accepted(*running_context.user_roles['/playbooks'])
     def __func():
         form = forms.CopyPlaybookForm(request.form)
@@ -141,10 +157,13 @@ def copy_playbook(playbook_name):
                 status = 'success'
 
             return {"status": status}
+
     return __func()
+
 
 def get_workflows(playbook_name):
     from server.context import running_context
+
     @roles_accepted(*running_context.user_roles['/playbooks'])
     def __func():
         try:
@@ -156,10 +175,13 @@ def get_workflows(playbook_name):
                 return {"status": "error: name not found"}
         except Exception as e:
             return {"status": "error: {0}".format(e)}
+
     return __func()
+
 
 def create_workflow(playbook_name, workflow_name):
     from server.context import running_context
+
     @roles_accepted(*running_context.user_roles['/playbooks'])
     def __func():
         form = forms.AddWorkflowForm(request.form)
@@ -199,29 +221,32 @@ def create_workflow(playbook_name, workflow_name):
             if running_context.controller.is_workflow_registered(playbook_name, workflow_name):
                 workflow = running_context.controller.get_workflow(playbook_name, workflow_name)
                 return {'workflow': {'name': workflow_name,
-                                                'steps': workflow.get_cytoscape_data(),
-                                                'options': workflow.options.as_json(),
-                                                'start': workflow.start_step},
-                                   'status': status}
+                                     'steps': workflow.get_cytoscape_data(),
+                                     'options': workflow.options.as_json(),
+                                     'start': workflow.start_step},
+                        'status': status}
             else:
                 current_app.logger.error('Could not add workflow {0}-{1}'.format(playbook_name, workflow_name))
                 return {'status': 'error: could not add workflow'}
         else:
             current_app.logger.error('Invalid form to add workflow {0}-{1}'.format(playbook_name, workflow_name))
             return {'status': 'error: invalid form'}
+
     return __func()
+
 
 def read_workflow(playbook_name, workflow_name):
     from server.context import running_context
+
     @roles_accepted(*running_context.user_roles['/playbooks'])
     def __func():
         if running_context.controller.is_workflow_registered(playbook_name, workflow_name):
             workflow = running_context.controller.get_workflow(playbook_name, workflow_name)
             if not request.get_json():
                 return {"status": "success",
-                                   "steps": workflow.get_cytoscape_data(),
-                                   'options': workflow.options.as_json(),
-                                   'start': workflow.start_step}
+                        "steps": workflow.get_cytoscape_data(),
+                        'options': workflow.options.as_json(),
+                        'start': workflow.start_step}
             elif 'ancestry' in request.get_json():
                 info = workflow.get_children(request.get_json()['ancestry'])
                 if info:
@@ -238,11 +263,13 @@ def read_workflow(playbook_name, workflow_name):
             current_app.logger.error('Workflow {0}-{1} not found. Cannot be displayed.'.format(playbook_name,
                                                                                                workflow_name))
             return {'status': 'error: name not found'}
+
     return __func()
 
 
 def update_workflow(playbook_name, workflow_name):
     from server.context import running_context
+
     @roles_accepted(*running_context.user_roles['/playbooks'])
     def __func(wf_name):
         if running_context.controller.is_workflow_registered(playbook_name, wf_name):
@@ -285,10 +312,13 @@ def update_workflow(playbook_name, workflow_name):
                 'Workflow {0}-{1} not found in controller. Cannot be updated.'.format(playbook_name,
                                                                                       wf_name))
             return {'status': 'error: workflow name is not valid'}
+
     return __func(workflow_name)
+
 
 def delete_workflow(playbook_name, workflow_name):
     from server.context import running_context
+
     @roles_accepted(*running_context.user_roles['/playbooks'])
     def __func():
         if running_context.controller.is_workflow_registered(playbook_name, workflow_name):
@@ -300,11 +330,14 @@ def delete_workflow(playbook_name, workflow_name):
                                                                                                      workflow_name))
             status = 'error: invalid workflow name'
         return {"status": status,
-                           "playbooks": running_context.controller.get_all_workflows()}
+                "playbooks": running_context.controller.get_all_workflows()}
+
     return __func()
+
 
 def read_workflow_risk(playbook_name, workflow_name):
     from server.context import running_context
+
     @roles_accepted(*running_context.user_roles['/playbooks'])
     def __func():
         if running_context.controller.is_workflow_registered(playbook_name, workflow_name):
@@ -312,14 +345,17 @@ def read_workflow_risk(playbook_name, workflow_name):
             risk_percent = "{0:.2f}".format(workflow.accumulated_risk * 100.00)
             risk_number = str(workflow.accumulated_risk * workflow.total_risk)
             return {"risk_percent": risk_percent,
-                               "risk_number": risk_number}
+                    "risk_number": risk_number}
         else:
             return {"status": "error: workflow not found"}
+
     return __func()
+
 
 def copy_workflow(playbook_name, workflow_name):
     from server.context import running_context
     from server.flaskserver import write_playbook_to_file
+
     @roles_accepted(*running_context.user_roles['/playbooks'])
     def __func():
         form = forms.CopyWorkflowForm(request.form)
@@ -348,11 +384,14 @@ def copy_workflow(playbook_name, workflow_name):
                 status = 'success'
 
             return {"status": status}
+
     return __func()
+
 
 def execute_workflow(playbook_name, workflow_name):
     from server.context import running_context
     from server.flaskserver import write_playbook_to_file
+
     @roles_accepted(*running_context.user_roles['/playbooks'])
     def __func():
         if running_context.controller.is_workflow_registered(playbook_name, workflow_name):
@@ -366,10 +405,13 @@ def execute_workflow(playbook_name, workflow_name):
                                                                                        workflow_name))
             status = 'error: invalid workflow name'
         return {"status": status}
+
     return __func()
+
 
 def pause_workflow(playbook_name, workflow_name):
     from server.context import running_context
+
     @roles_accepted(*running_context.user_roles['/playbooks'])
     def __func():
         if running_context.controller.is_workflow_registered(playbook_name, workflow_name):
@@ -381,10 +423,13 @@ def pause_workflow(playbook_name, workflow_name):
                                                                                                           workflow_name))
             status = 'error: invalid playbook and/or workflow name'
             return {"status": status}
+
     return __func()
+
 
 def resume_workflow(playbook_name, workflow_name):
     from server.context import running_context
+
     @roles_accepted(*running_context.user_roles['/playbooks'])
     def __func():
         form = forms.ResumeWorkflowForm(request.form)
@@ -401,11 +446,14 @@ def resume_workflow(playbook_name, workflow_name):
                 'Cannot resume workflow {0}-{1}. Invalid form'.format(playbook_name, workflow_name))
             status = 'error: invalid form'
         return {"status": status}
+
     return __func()
+
 
 def save_workflow(playbook_name, workflow_name):
     from server.context import running_context
     from server.flaskserver import write_playbook_to_file
+
     @roles_accepted(*running_context.user_roles['/playbooks'])
     def __func():
         if running_context.controller.is_workflow_registered(playbook_name, workflow_name):
@@ -423,7 +471,7 @@ def save_workflow(playbook_name, workflow_name):
                         current_app.logger.info(
                             'Cannot save workflow {0}-{1} to file'.format(playbook_name, workflow_name))
                         return {"status": "Error saving: {0}".format(e.message),
-                             "steps": workflow.get_cytoscape_data()}
+                                "steps": workflow.get_cytoscape_data()}
                 else:
                     current_app.logger.info('Cannot save workflow {0}-{1}. Malformed JSON'.format(playbook_name,
                                                                                                   workflow_name))
@@ -436,7 +484,9 @@ def save_workflow(playbook_name, workflow_name):
             current_app.logger.info('Cannot save workflow {0}-{1}. Workflow not in controller'.format(playbook_name,
                                                                                                       workflow_name))
             return {'status': 'error: workflow name is not valid'}
+
     return __func()
+
 
 def add_default_template(playbook_name, workflow_name):
     from server.context import running_context
